--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - 8080:3000
+      - ${SERVER_PORT}:3000
     command: npm run start:dev
     depends_on:
       - postgres
@@ -23,7 +23,7 @@ services:
       - .env
     shm_size: 256mb
     environment:
-      POSTGRES_USER: ${POSTGRES_User}
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       PG_DATA: /var/lib/postgresql/data
